# worldcup_aibettingtool

./: .gitignore  AGENTS.md  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: fixtures.py  health.py  predictions.py  teams.py  value.py
backend/app/core/: config.py
backend/app/data/: fixtures.csv  matches.csv  odds.csv  teams.csv
backend/app/domain/: __init__.py  entities.py  markets.py  value.py
backend/app/infrastructure/: repositories.py
backend/app/services/: model_service.py  prediction_service.py  value_service.py
backend/app/stats/: __init__.py  dixon_coles.py  markets.py  odds.py  poisson.py
backend/scripts/: generate_sample_data.py
backend/tests/: test_api.py  test_dixon_coles.py  test_markets.py  test_odds.py  test_poisson.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  index.css  types.ts
frontend/src/components/: Fixtures.tsx  Ratings.tsx  ValueBets.tsx
lib/: world-cup-data.ts
site/: data.json  data_foundation.html  data_foundation.json  index.html  predictions.html
src/worldcup_aibettingtool/: __init__.py  cli.py  dashboard.py  data_foundation.py  ingestion.py  live_stats.py  models.py  odds.py  predictions.py  probability.py  sample_data.py  source_catalog.py  update_jobs.py  warehouse.py
tests/: test_analytics.py  test_data_foundation.py
